--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <section class="second clearfix">
+    <section class="sixth clearfix">
       
       <header>
         <h1>Video Portfolio</h1>
