Fixed mixed content error

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     <title>Laurel Cyr Video Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -24,14 +24,14 @@
 
       <article class="video">
         <figure>
-        <a class="fancybox fancybox.iframe" href="//player.vimeo.com/video/200960582"><img class="videoThumb" src="https://i.vimeocdn.com/video/614608232_130x73.jpg"></a>
+        <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/200960582"><img class="videoThumb" src="https://i.vimeocdn.com/video/614608232_130x73.jpg"></a>
         </figure>
         <h2 class="videoTitle">The Breakup</h2>
       </article>
 
       <article class="video">
         <figure>
-        <a class="fancybox fancybox.iframe" href="//player.vimeo.com/video/200960616"><img class="videoThumb" src="https://i.vimeocdn.com/video/614608263_130x73.jpg"></a>
+        <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/200960616"><img class="videoThumb" src="https://i.vimeocdn.com/video/614608263_130x73.jpg"></a>
         </figure>
         <h2 class="videoTitle">Victrola Documentary</h2>
       </article>
@@ -39,7 +39,7 @@
       
       <article class="video">
         <figure>
-        <a class="fancybox fancybox.iframe" href="//player.vimeo.com/video/200960562"><img class="videoThumb" src="https://i.vimeocdn.com/video/614608162_130x73.jpg"></a>
+        <a class="fancybox fancybox.iframe" href="https://player.vimeo.com/video/200960562"><img class="videoThumb" src="https://i.vimeocdn.com/video/614608162_130x73.jpg"></a>
         </figure>
         <h2 class="videoTitle">Gene Juarez Commercial</h2>
       </article>
@@ -52,7 +52,7 @@
     <p>by Laurel K. Cyr<p>
   </footer>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/global.min.js"></script>
   
